<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TSC</string>
    <string name="overview_header">MEASUREMENT CIRCUIT</string>
    <string name="fs_header">RESONANCE FREQUENCY (Fs)</string>
    <string name="um_header">MINIMUM VOLTAGE (Um)</string>
    <string name="qts_header">DAMPING (Qms,Qes,Qts)</string>
    <string name="vas_header">EQUIVALENT AIR VOLUME</string>
    <string name="summary">SPEAKER SUMMARY</string>
    <string name="generator">Frequency generator</string>
    <string name="amplifier">Power amplifier</string>
    <string name="overview_body_text_1">Equipment</string>
    <string name="overview_body_text_2">- Frequency generator\n- Power amplifier\n- Resistor (400 Оm - 1 kОm, >= 2 Watt)\n- Multimeter / Millivoltmeter\n- Speaker</string>
    <string name="overview_body_text_3">Preparation</string>
    <string name="overview_body_text_4">- Place the speaker away from the walls\n- Connect components as shown on the circuit\n- Set frequency in range of 500-1000 Hz\n- Set multimeter mode to\n\u00A0\u00A0AC voltage measurement (V~)\n- Adjust volume on the amplifier so, that\n\u00A0\u00A0multimeter voltage value is in range 5-10 V\n- Do not change amplifier volume\n\u00A0\u00A0till measurement ended</string>
    <string name="overview_body_text_5">Measurement resonance frequency</string>
    <string name="overview_body_text_6">- Connect components as shown on the circuit\n- Increase generator frequency till\n\u00A0\u00A0multimeter voltage value is first maximum\n- Enter measured frequency and voltage\n\u00A0\u00A0to fields above</string>
    <string name="overview_body_text_7">Measurement voltage Um</string>
    <string name="overview_body_text_8">- Connect components as shown on the circuit\n- By increasing generator frequency find\n\u00A0\u00A0frequency, when multimeter voltage value\n\u00A0\u00A0is stable minimum\n- Enter measured voltage to field above</string>
    <string name="overview_body_text_9">Measurement dumping</string>
    <string name="overview_body_text_10">- Connect components as shown on the circuit\n- Measure frequencies F1 and F2, \n\u00A0\u00A0match voltage U12 (F1 \u003C Fs, F2 \u003E Fs)</string>
    <string name="overview_body_text_11">Equivalent air volume</string>
    <string name="overview_body_text_12">- Measure speaker diameter\n\u00A0\u00A0including half the surround\n- Place added mass on the\n\u00A0\u00A0speaker cone (~10 grams\n\u00A0\u00A0per every inch of cone\n\u00A0\u00A0diameter)\n- Measure freq. resounance\n\u00A0\u00A0under load</string>
    <string name="fs_string">Frequency (Fs):</string>
    <string name="f1_string">Frequency (F1):</string>
    <string name="f2_string">Frequency (F2):</string>
    <string name="us_string">Voltage (Us):</string>
    <string name="u12_string">Voltage (U12):</string>
    <string name="qms_string">Qms:</string>
    <string name="qes_string">Qes:</string>
    <string name="qts_string">Qts:</string>
    <string name="hz_string">Hz</string>
    <string name="volt_string">Volt</string>
    <string name="um_string">Voltage (Um):</string>
    <string name="dia_string">Diameter (D):</string>
    <string name="cm_string">Cm</string>
    <string name="m_string">Weight (Ma):</string>
    <string name="g_string">G</string>
    <string name="l_string">L</string>
    <string name="fsa_string">Frequency (Fsa):</string>
    <string name="sum_fs">Resonance (Fs):</string>
    <string name="sum_qms">Damping (Qms):</string>
    <string name="sum_qes">Damping (Qes):</string>
    <string name="sum_qts">Damping (Qts):</string>
    <string name="sum_vas">Eq.air volume (Vas):</string>
    <string name="sum_ebp">EBP (Fs/Qts):</string>
    <string name="sum_user_vol">User volume:</string>
    <string name="save_button_str">Save</string>
    <string name="back_button_str">\u003C Back</string>
    <string name="speaker_name">Name...</string>
    <string name="enter_name">Please enter speaker name</string>
    <string name="already_exists">Speaker already exists</string>
    <string name="data_load_error">Data load error</string>
    <string name="unsuccessfully_measurements">Can not to save unsuccessfully measurements</string>
    <string name="saved_str">Save/Show measurements</string>
    <string name="save_str">Saved</string>
    <string name="save_error_str">Save error</string>
    <string name="no_ext_storate_found">External storage is unavailable</string>
    <string name="init_save_error_str">Data save unavailable</string>
    <string name="lt_500hz">\u003C500Hz</string>
    <string name="bt_500_2000hz">500-2000Hz</string>
    <string name="gt_2000hz">\u003E2000Hz</string>
    <string name="loading">Loading...</string>
    <string name="version">v1.0.0</string>
    <string name="about_line1">TSCalculator - application for measurement</string>
    <string name="about_line2">Thiele/Small parameters of speakers</string>
    <string name="copyright">Copyright \u00A9 2020 Yurii Rohoza</string>
</resources>
