<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorFiveV1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:background="@drawable/rounded_rect"
        android:textColor="@color/colorTwoV1"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/summary"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/circuit"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/rounded_rect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/body"
        android:layout_margin="8dp"
        android:padding="8dp">

        <com.example.tscalculator.widgets.VolumeType
            android:id="@+id/volume_type_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_rect"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circuit">

        <TextView
            android:id="@+id/textSumFs"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorOneV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_fs"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumFs"
            />

        <EditText
            android:id="@+id/fieldSumFs"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/textSumFs"
            />

        <TextView
            android:id="@+id/cm_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTwoV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/hz_string"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/fieldSumFs"
            app:layout_constraintTop_toTopOf="@id/fieldSumFs"
            />

        <TextView
            android:id="@+id/textSumQms"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorOneV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_qms"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumQms"
            />

        <EditText
            android:id="@+id/fieldSumQms"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumFs"
            app:layout_constraintLeft_toRightOf="@id/textSumQms"
            />

        <TextView
            android:id="@+id/textSumQes"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorOneV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_qes"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumQes"
            />

        <EditText
            android:id="@+id/fieldSumQes"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumQms"
            app:layout_constraintLeft_toRightOf="@id/textSumQes"
            />

        <TextView
            android:id="@+id/textSumQts"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorOneV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_qts"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumQts"
            />

        <EditText
            android:id="@+id/fieldSumQts"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumQes"
            app:layout_constraintLeft_toRightOf="@id/textSumQts"
            />

        <TextView
            android:id="@+id/textVas"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorOneV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_vas"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumVas"
            />

        <EditText
            android:id="@+id/fieldSumVas"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumQts"
            app:layout_constraintLeft_toRightOf="@id/textVas"
            />

        <TextView
            android:id="@+id/l_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTwoV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/l_string"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/fieldSumVas"
            app:layout_constraintTop_toTopOf="@id/fieldSumVas"
            />

        <TextView
            android:id="@+id/textEbp"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorOneV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_ebp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumEbp"
            />

        <EditText
            android:id="@+id/fieldSumEbp"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumVas"
            app:layout_constraintLeft_toRightOf="@id/textEbp"
            />

        <Button
            android:id="@+id/savesButton"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:background="@drawable/save_button_drawable"
            android:text="@string/saved_str"
            android:textSize="12sp"
            android:textColor="@color/colorTenV1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fieldSumEbp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>