<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/save_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSixV1"
    android:padding="2dp"
    >

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_rect_dark"
        android:padding="8dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >

    <TextView
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:textColor="@color/colorTwoV1"
        android:background="@drawable/rounded_rect"
        android:fontFamily="monospace"
        android:textSize="16sp"
        android:text="35GDN"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/deleteButton"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="@id/nameText"
        app:layout_constraintLeft_toRightOf="@id/nameText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:background="@drawable/delete_button_selector"
        />

        <TextView
            android:id="@+id/textSumFs"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorNineV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_fs"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumFs"
            />

        <EditText
            android:id="@+id/fieldSumFs"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect_dark"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/nameText"
            app:layout_constraintLeft_toRightOf="@id/textSumFs"
            />

        <TextView
            android:id="@+id/cm_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTwoV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/hz_string"
            android:layout_marginTop="6dp"
            app:layout_constraintLeft_toRightOf="@id/fieldSumFs"
            app:layout_constraintTop_toTopOf="@id/fieldSumFs"
            />

        <TextView
            android:id="@+id/textSumQms"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorNineV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_qms"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumQms"
            />

        <EditText
            android:id="@+id/fieldSumQms"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect_dark"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumFs"
            app:layout_constraintLeft_toRightOf="@id/textSumQms"
            />

        <TextView
            android:id="@+id/textSumQes"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorNineV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_qes"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumQes"
            />

        <EditText
            android:id="@+id/fieldSumQes"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect_dark"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumQms"
            app:layout_constraintLeft_toRightOf="@id/textSumQes"
            />

        <TextView
            android:id="@+id/textSumQts"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorNineV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_qts"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumQts"
            />

        <EditText
            android:id="@+id/fieldSumQts"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect_dark"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumQes"
            app:layout_constraintLeft_toRightOf="@id/textSumQts"
            />

        <TextView
            android:id="@+id/textVas"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorNineV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_vas"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumVas"
            />

        <EditText
            android:id="@+id/fieldSumVas"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect_dark"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumQts"
            app:layout_constraintLeft_toRightOf="@id/textVas"
            />

        <TextView
            android:id="@+id/l_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTwoV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/l_string"
            android:layout_marginTop="6dp"
            app:layout_constraintLeft_toRightOf="@id/fieldSumVas"
            app:layout_constraintTop_toTopOf="@id/fieldSumVas"
            />

        <TextView
            android:id="@+id/textEbp"
            android:layout_width="170dp"
            android:layout_height="20dp"
            android:textColor="@color/colorNineV1"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:text="@string/sum_ebp"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/fieldSumEbp"
            />

        <EditText
            android:id="@+id/fieldSumEbp"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_rect_dark"
            android:textColor="@color/colorTenV1"
            android:textSize="16sp"
            android:text="0"
            android:inputType="none"
            android:enabled="false"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fieldSumVas"
            app:layout_constraintLeft_toRightOf="@id/textEbp"
            />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>