<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFiveV1"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/savePanel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_rect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:padding="8dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/save_button_drawable"
            android:text="@string/back_button_str"
            android:textSize="12sp"
            android:textColor="@color/colorOneV1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/save_button_drawable"
            android:text="@string/save_button_str"
            android:textSize="12sp"
            android:textColor="@color/colorTenV1"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/backButton"
            />

        <EditText
            android:id="@+id/saveNameField"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rect_dark"
            android:textColor="@color/colorFourV1"
            android:textSize="16sp"
            android:text=""
            android:textColorHint="@color/colorFiveV1"
            android:hint="@string/speaker_name"
            android:inputType="textShortMessage"
            android:fontFamily="monospace"
            android:textAlignment="viewEnd"
            android:paddingRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/saveButton"
            app:layout_constraintRight_toRightOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_rect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/savePanel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <ListView
            android:id="@+id/save_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>